fix: Ensure chart top y-axis label does not get cropped (#2853)

--- a/src/internal/components/cartesian-chart/styles.scss
+++ b/src/internal/components/cartesian-chart/styles.scss
@@ -124,6 +124,10 @@
 .chart-container-outer {
   display: flex;
 
+  &:not(.axis-label + &, &.has-filters) {
+    margin-block-start: calc(0.5 * #{awsui.$font-chart-detail-size});
+  }
+
   &.fit-height {
     flex: 1;
   }
